hphp/hack/test/typecheck/coeffects/higher_order_function.php.exp
File "higher_order_function.php", line 19, characters 3-7:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "higher_order_function.php", line 18, characters 2-8:
  From this declaration, the context of this function body provides the capability set {}
  File "higher_order_function.php", line 17, characters 18-21:
  But the function being called requires the capability set {Te}
File "higher_order_function.php", line 34, characters 3-37:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "higher_order_function.php", line 31, characters 34-39:
  From this declaration, the context of this function body provides the capability set {}
  File "higher_order_function.php", line 8, characters 2-5:
  But the function being called requires the capability set {[unresolved]}
